Very big commit Archive list restore and delete changed Add Search View with implementation Add user location

--- a/app/src/main/res/layout/activity_show_place.xml
+++ b/app/src/main/res/layout/activity_show_place.xml
@@ -60,7 +60,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/fab_margin"
         android:src="@drawable/ic_edit_white_24dp"
-        app:backgroundTint="@color/logoColor"
+        app:backgroundTint="@color/Green"
         app:fabSize="mini"
         app:layout_anchor="@+id/add_place_app_bar"
         app:layout_anchorGravity="left|bottom"/>
@@ -70,7 +70,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/fab_margin"
-        android:src="@drawable/ic_delete_white_24dp"
+        android:src="@drawable/ic_archive_white_24dp"
         app:backgroundTint="@color/logoColor"
         app:layout_anchor="@id/add_place_app_bar"
         app:layout_anchorGravity="bottom|end"
