--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:theme="@style/AppTheme.NoActionBar"
-    tools:context="com.maciejak.myplaces.ui.activities.RegisterActivity">
+    tools:context="com.maciejak.myplaces.ui.activities.RegistrationActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
