--- a/app/src/main/res/layout/fragment_my_places_list.xml
+++ b/app/src/main/res/layout/fragment_my_places_list.xml
@@ -17,7 +17,7 @@
         android:orientation="vertical"
         android:layout_gravity="center"
         android:gravity="center"
-        android:visibility="visible">
+        android:visibility="gone">
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
