--- a/app/src/main/res/menu/activity_main_drawer_remote.xml
+++ b/app/src/main/res/menu/activity_main_drawer_remote.xml
@@ -22,12 +22,8 @@
     <item android:title="Pozostałe">
         <menu>
             <item
-                android:id="@+id/nav_about"
-                android:icon="@drawable/ic_menu_share"
-                android:title="@string/about" />
-            <item
                 android:id="@+id/nav_logout"
-                android:icon="@drawable/ic_menu_send"
+                android:icon="@drawable/ic_power_settings_new"
                 android:title="@string/logout" />
         </menu>
     </item>
