--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -41,7 +41,7 @@
                     android:id="@+id/login_username"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="@string/login_email"
+                    android:hint="@string/login_login"
                     android:inputType="textAutoComplete"
                     app:backgroundTint="@color/logoColor"/>
             </android.support.design.widget.TextInputLayout>
